//   Copyright 2011-2013 SAYservice s.r.l.
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//       http://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.
package smartcampus.service.esse3.data.message;

import "core.proto";

message Student {
	required string fiscalCode = 1;
	required string name = 2;
	required string surname = 3;
	required string enrollmentYear = 4;
	required string nation = 5;
	required string academicYear = 6;
	required string supplementaryYears = 7;
	required string cfu = 8;
	required string cfuTotal = 9;
	required string marksNumber = 10;
	required string marksAverage = 11;
	required string gender = 12;
	required string dateOfBirth = 13;
	required string phone = 14;
	required string mobile = 15;
	required string address = 16;
	required string cds = 17;
	required string idAda = 18;
	required string idGiada = 19;
}

message Exam {
	required string id = 1;
	required string cod = 2;
	required string name = 3;
	required string result = 4;
	required bool lode = 5;
	required string weight = 6;
	required int64 date = 7;
//	optional string description = 8;
}

message StudentExams {
	required string idAda = 1;
	repeated Exam exams = 2;
	repeated Exam todo = 3;
}

message Facolta {
	required string facId = 1;
	required string description = 2;
}

message Cds {
	required string cdsId = 1;
	required string cdsCod = 2;
	required string facId = 3;
	required string description = 4;
	required string durata = 5;
	required string aaOrd = 6;
	repeated Pds pds = 7;
}

message Pds {
	required string pdsId = 1;
	required string pdsCod = 2;
}

message Ad {
	required string adId = 1;
	required string adcod = 2;
	required string description = 3;
	repeated string fatPart = 4;
	repeated string domPart = 5;
}

message Orari {
	required string type = 1;
	required string date = 2;
	required string from = 3;
	required string to = 4;
	required string room = 5;
	required string teacher = 6;
}

message CalendarCds {
	required string id = 1;
	required string title = 2;
	required string teacher = 3;
	required string room = 4;
	required int64 from = 5;
	required int64 to = 6;
	required string type = 7;
}

